--- a/css/sass/partials/header.scss
+++ b/css/sass/partials/header.scss
@@ -13,6 +13,8 @@
 
 	.container{
 		position: relative;
+		padding-left: $gutter;
+		padding-right: $gutter;
 	}
 
 	nav{
@@ -138,8 +140,6 @@
 			opacity: 0;
 			@include transition(opacity .3s  ease-in-out);
 		}
-
-
 	}
 }
 
@@ -147,6 +147,7 @@
 	@include background-image('logo');
 	background-size: contain;
 	width: span(2);
+	padding-left: $gutter;
 
 	img{
 		@include object-fit(contain);
@@ -155,8 +156,67 @@
 }
 
 .header, .top-bar{
+	
 	ul, nav{
 		@include flexbox();
+	}
+
+	nav.show-on-mobile{
+		display: none;
+	}
+}
+
+.search-bar{
+	max-height: 0;
+	width: 100%;
+	overflow: hidden;
+	@include transition(max-height .3s);
+
+	&.active{
+		max-height: 60px;
+	}
+
+	form{
+		width: 100%;
+		height: 60px;
+	}
+
+	input{
+		position: relative;
+		z-index: 2;
+		border: none;
+		padding-left: $gutterLarge;
+		width: 100%;
+		height: 100%;
+		font-size: 2.2rem;
+		outline: none;
+		font-family: $font-family-base;
+		font-style: italic;
+
+    &:focus{
+			& + span{
+				opacity: 1;
+				z-index: 2;
+			}
+		}
+	}
+
+	button, span{
+		z-index: 5;
+		position: absolute;
+		right: 10px;
+		top: 10px;
+		cursor: pointer;
+		background-color: transparent;
+		border: none;
+		font-size: 3rem;
+		padding: 2px 2px;
+	}
+
+	span{
+		z-index: -1;
+		opacity: 0;
+		@include transition(opacity .3s  ease-in-out);
 	}
 }
 
@@ -202,6 +262,24 @@
 	.top-menu{
 		border-right: solid $grey thin;
 		border-left: solid $grey thin;
+
+    .account a, .panier a{
+		  border-left: solid #dbdbdb thin;
+		  white-space: nowrap;
+		  width: auto;
+
+		  &:before{
+		  	@include icon('l');
+		  	float: left;
+		  	margin-top: -8px;
+		  	margin-right: 5px;
+		  }
+    }
+    .panier a{
+ 			&:before{
+		  	@include icon('k');
+		  }
+	  }
 	}
 
 	.social-menu{
@@ -223,6 +301,7 @@
 	  font-size: 2rem;
 	  padding: 8px;
 	  width: auto;
+	  position: absolute;
 
 	  &:hover{
 	    background-color: $black;
