--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -27,6 +27,8 @@ $susy: (
 
 main{
 	@include flex(1);
+	padding-left: $gutter;
+	padding-right: $gutter;
 
 	> *:not(.full){
 		max-width: $wrapper-width;
