--- a/css/sass/partials/mediaqueries.scss
+++ b/css/sass/partials/mediaqueries.scss
@@ -16,17 +16,187 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 // $large-up: "#{$screen} and (min-width: #{$break-large})";
 // $extra-large-down: "#{$screen} and (max-width: #{$break-extra-large})";
 
-.show-for-medium, .show-for-small{
+.show-for-medium, .show-for-small, .show-on-mobile{
 	display: none;
 }
 
 // en dessous de 1170
 @media #{$large-down}{
+
+	.logo{
+		margin-right: $gutter;	
+	}
+
+	.header-menu{
+		font-size: 1.6rem;
+
+		li a{
+			padding: 8px 10px 5px 10px
+		}
+	}	
+
+	.footer{
+		.detail{
+			width: span(2);
+		}
+
+		.vcard{
+			width: span(3);
+		}
+
+		.footer-menu{
+			width: span(1);
+		}
+
+		.horaire{
+			width: span(3);
+		}
+
+		.social-menu{
+			width: span(2);
+		}
+	}
+
+	.page-id-52 .details, .page-id-54 .details{
+		padding-left: 0;
+	}
+
+	.row{
+		> *{
+			@include flex-shrink(initial);
+		}
+	}
 }
 
 // en dessous de 660
 @media #{$medium-down}{
+	.show-on-mobile{
+		display: initial;
+	}
+
+	body.active{
+		overflow-y: hidden;
+	}
+
+	.header{
+
+		>	.container{
+			@include align-items(center);
+			@include flex-wrap(wrap);
+			> *{
+				z-index: 5;
+			}
+		}
+
+		.logo{
+			@include flex(1);
+			max-height: 80px;
+			background-position: center;
+			overflow: hidden;
+			position: relative;
+		}
+
+		nav{
+			padding-left: $gutter;
+			padding-right: $gutter;
+			margin-right: 0;
+
+			li{
+				width: 60px;
+				text-align: center;
+				font-size: 3.7rem;
+			}
+
+			&.show-on-mobile{
+				display: initial;
+				@include flex(0);
+				position: relative;
+			}
+
+			&.switch{
+
+				.close{
+					display: none;
+				}
+
+				.active{
+					.close{
+						display: initial;
+					}
+					.open{
+						display: none;
+					}
+				}
+
+				i.maricon-search{
+					font-size: 0.8em;
+				}
+			}
+
+			a:after{
+				display: none;
+			}
+
+			&.nav{
+				@include flex(0 0 100%);
+				@include order(2);
+				height: 0vh;
+				overflow-y: hidden;
+		    background-color: white;
+		    position: absolute;
+		    left: 0;
+		    top: 0;
+		    width: 100%;
+		    z-index: 1 !important;
+		    opacity: 0;
+		    @include transition(height .3s, opacity .3s);
+
+		    .sub-menu{
+		    	display: none !important;
+		    }
+
+		    .header-menu{
+			    padding-top: 90px;
+		    	flex-direction: column;
+		    	align-items: center;
+		    	text-align: center;
+		    	justify-content: center;
+		    	height: 100%;
+
+		    	li{
+		    		width: auto;
+		    		@include order(2);
+
+		    		&.search{
+		    			display: none;
+		    		}
+		    	}
+
+		    }
+			}
+		}
+
+		&.active{
+
+			nav.nav{
+		    height: 100vh;
+		    opacity: 1;
+			}
+		}
+	}
+
+	.top-bar{
+		display: none;
+	}
 }
 
 @media #{$small-down}{
+
+	.header{
+		nav{
+			li{
+				font-size: 3rem;
+			}
+		}
+	}
 }
