--- a/css/sass/partials/pages.scss
+++ b/css/sass/partials/pages.scss
@@ -26,7 +26,7 @@
 				height: 100%;
 				margin: 0;
 				width: span(2 wide);
-				clear: none;
+				clear: none !important;
 				padding: 0 $gap/2;
 
 				a{
@@ -73,6 +73,7 @@
 		padding: $gutter span(1);
 		display: inline-block;
 		color: $featured;
+		width: 100%;
 
 		h3{
 			text-align: center;
@@ -167,13 +168,14 @@
 	}
 
 	> a{
-		position: absolute;
-    right: 30px;
-    bottom: 47px;
-		width: 160px;
-		height: 160px;
+		// position: absolute;
+  //   right: 30px;
+  //   bottom: 47px;
+		// width: 160px;
+		// height: 160px;
 		@include flexbox();
 		@include align-items(center);
+		padding-bottom: $gutterLarge;
 	}
 }
 
