--- a/css/sass/partials/header.scss
+++ b/css/sass/partials/header.scss
@@ -174,11 +174,15 @@
 
 	&.active{
 		max-height: 60px;
+		form{
+			visibility: visible;
+		}
 	}
 
 	form{
 		width: 100%;
 		height: 60px;
+		visibility: hidden;
 	}
 
 	input{
