--- a/css/sass/partials/content.scss
+++ b/css/sass/partials/content.scss
@@ -33,6 +33,14 @@ section{
 	> h3{
 		text-align: center;
 	}
+
+	&.full{
+		background-color: #f0f0f0;
+		margin-left: -10px;
+		padding-left: 10px;
+		margin-right: -10px;
+		padding-right: 10px;
+	}
 }
 
 .thumbnail{
