--- a/css/sass/partials/pages.scss
+++ b/css/sass/partials/pages.scss
@@ -31,7 +31,7 @@
 
 				a{
 					@include flexbox();
-					@include justify-content(center);
+					//@include justify-content(center);
 					@include flex-direction(column);
 					height: 100%;
 				}
@@ -58,6 +58,10 @@
     padding-top: 5px;
     left: 20px;
     top: 20px;
+	}
+
+	.woocommerce{
+		height: 100%;
 	}
 }
 
@@ -105,7 +109,7 @@
 	}
 }
 
-.immanquables{
+section.immanquables{
 	background-color: $featured;
 	color: $lightGrey;
 	padding: $gap $gutter;
@@ -181,7 +185,6 @@
 
 /* single content */
 .related-products{
-	background-color: $lighterGrey;
 	padding-top: $gap;
 
 	> .products{
@@ -373,6 +376,7 @@ section.articles{
 	.content{
 		padding-top: 60px;
 		width: span(8);
+		max-width: 100%;
 		margin: 0 auto;
 		@include flexbox-column();
 
