--- a/css/sass/partials/header.scss
+++ b/css/sass/partials/header.scss
@@ -61,20 +61,28 @@
     	width: 100%;
     	top: $headerHeight;
     	left: 0;
-    	background-color: white;
+    	background-color: $darkGrey;
 			overflow: hidden;
 			max-height: 0px;
   		padding-left: $gap;
   		padding-right: $gap;
+			
+			a{
+				color: white;
+
+				&:hover{
+					border-color: white;
+				}
+			}
 
   		&:before, &:after{
   			content:'';
   			width: 100%;
-  			padding-top: $gap;
+  			padding-top: $gutterLarge;
   		}
 
   		&:before{
-  			border-top: thin solid $grey;
+  			//border-top: thin solid $grey;
   		}
     }
 
