--- a/css/sass/partials/layout.scss
+++ b/css/sass/partials/layout.scss
@@ -20,7 +20,7 @@ $susy: (
 
 %container, .container{
 	max-width: $wrapper-width;
-	min-height: 100%;
+	// min-height: 100%;
   padding: 0 $margin-horizontal-large;
   margin: 0 auto;
 }
@@ -32,7 +32,7 @@ main{
 
 	> *:not(.full){
 		max-width: $wrapper-width;
-		min-height: 100%;
+		// min-height: 100%;
 	  padding: 0 $margin-horizontal-large;
 	  margin-left: auto;
 	  margin-right: auto;
