--- a/css/sass/partials/mediaqueries.scss
+++ b/css/sass/partials/mediaqueries.scss
@@ -133,7 +133,7 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 			li{
 				width: 60px;
 				text-align: center;
-				font-size: 3.7rem;
+				font-size: 2.8rem;
 			}
 
 			&.show-on-mobile{
@@ -169,6 +169,9 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 			&.nav{
 				@include flex(0 0 100%);
 				@include order(2);
+				@include flex-direction(column);
+				@include align-items(center);
+				@include justify-content(center);
 				height: 0vh;
 				overflow-y: hidden;
 		    background-color: white;
@@ -186,11 +189,14 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 
 		    .header-menu{
 			    padding-top: 90px;
+			  }
+
+			  ul{
 		    	flex-direction: column;
 		    	align-items: center;
 		    	text-align: center;
 		    	justify-content: center;
-		    	height: 100%;
+		    	// height: 100%;
 
 		    	li{
 		    		width: auto;
@@ -200,7 +206,10 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 		    			display: none;
 		    		}
 		    	}
+		    }
 
+		    .account, .panier{
+		    	display: none;
 		    }
 			}
 		}
@@ -369,7 +378,7 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 	.header{
 		nav{
 			li{
-				font-size: 3rem;
+				font-size: 2.4rem;
 			}
 		}
 	}
