--- a/css/sass/partials/mediaqueries.scss
+++ b/css/sass/partials/mediaqueries.scss
@@ -104,7 +104,12 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 	}
 
 	body.active{
-		overflow-y: hidden;
+		overflow: hidden;
+		height: 100vh;
+	}
+
+	.header.active{
+		height: 100vh;
 	}
 
 	.header{
@@ -172,6 +177,7 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 				@include flex-direction(column);
 				@include align-items(center);
 				@include justify-content(center);
+		    padding-top: 90px;
 				height: 0vh;
 				overflow-y: hidden;
 		    background-color: white;
@@ -188,7 +194,6 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 		    }
 
 		    .header-menu{
-			    padding-top: 90px;
 			  }
 
 			  ul{
@@ -297,7 +302,10 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 		margin-right: 0;
 	}
 
-	.immanquables{
+	section.immanquables{
+		.woocommerce{
+			width: 100%;
+		}
 		.container{
 			@include flex-direction(column);
 		}
@@ -377,9 +385,14 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 
 	.header{
 		nav{
-			li{
+			padding: 0;
+			li {
 				font-size: 2.4rem;
-			}
+				width: 40px;
+	  	}
+	  	a{
+		    padding: 5px 7px 2px 7px;
+	  	}
 		}
 	}
 
@@ -440,6 +453,12 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
 			display: none;
 		}
 	}
+
+	section.immanquables{
+		.woocommerce ul.products li.product:last-child{
+			display: none;
+		}
+	}
 }
 
 // en dessous de 440
@@ -452,6 +471,13 @@ $large-down: "#{$screen} and (max-width: #{$break-large})";
   	a{
 	    padding: 5px 7px 2px 7px;
   	}
+  }
+
+  .coup-de-coeur .woocommerce ul.products li.product a:before{
+  	height: 60px;
+    width: 60px;
+    font-size: 4.2rem;
+    padding-top: 3px;
   }
 
 	.footer{
