--- a/css/sass/partials/footer.scss
+++ b/css/sass/partials/footer.scss
@@ -59,6 +59,7 @@
 			text-transform: uppercase;
 			text-align: center;
 			margin-right: $gap;
+			margin-bottom: $gutter;
 		}
 
 		li:last-child a{
