--- a/css/sass/partials/woocommerce.scss
+++ b/css/sass/partials/woocommerce.scss
@@ -547,3 +547,7 @@
 	width: auto !important;
 	padding: 0 10px!important;
 }
+
+table.cart_totals tr.shipping, table.shop_table tr.shipping {
+  display: none; 
+}
